# GithubChat

./: .gitignore  README.md  api.py  app.py  app_repo.py  config.py  data_base_manager.py  data_pipeline.py  logging_config.py  pyproject.toml  rag.py  rag_logs.md  test_rag.py
pipeline_transformers/: document_to_adal_document.py
pydantic_models/: __init__.py  models.py
src/: rag.py
